it can swictch between cold and hot coffee and use the buttons to switch instead of search.the laytout of the web page has been changed for responsiveness across devices of verying widths

--- a/index.html
+++ b/index.html
@@ -12,28 +12,20 @@
         <img src="coffee3-removebg-preview.png" alt="Logo" class="logo">
         <h1>Brew & Bloom</h1>
         <form action="" class="search">
-            <input type="text" placeholder="Iced or Hot">
-            <button id="btn-1">Submit</button>
+            <button id="hot-btn" type="button">Hot Coffee</button>
+            <button id="iced-btn" type="button">Iced Coffee</button>
         </form>
     </nav>
 
     <section class="about">
-        <img src="coffee1.jpg" alt="coffee" class="image1">
         <img src="coffee.jpg" alt="coffee" class="image2">
         <p>Coffee is a rich, aromatic beverage enjoyed worldwide for <br>its bold flavor and energy boost. <br>Whether brewed strong or creamy,<br> it’s a daily ritual that brings people together.</p>
     </section>
 
-    <div><h1>HOT COFEES</h1></div>
+    <div><h1 id="coffee-title">COFFEES</h1></div>
+
     <section class="coffee-container">
-        <div class="coffee-info">
-            <h2 id="coffee-name">Coffee Name</h2>
-            <p id="coffee-description">Description goes here...</p>
-            <p><strong>Origin:</strong> <span id="coffee-origin"></span></p>
-            <p><strong>Roast Level:</strong> <span id="coffee-roast"></span></p>
-        </div>
-        <div class="coffee-image">
-            <img id="coffee-img" src="placeholder.jpg" alt="Coffee Image">
-        </div>
+       
     </section>
 
 </body>
